<resources>
    <string name="app_name">TeachingManage</string>
    <string name="appTitle">אפליקציית עזר למרצה</string>
    <string name="userName">שם משתמש</string>
    <string name="pass">סיסמא</string>
    <string name="logInto">התחבר/י</string>
    <string name="theCourse">קורסים</string>
    <string name="checktheCourse">בדוק/י את הקורסים</string>
    <string name="courseId">קוד קורס</string>
    <string name="courseName">שם הקורס</string>
    <string name="courseRoom">חדר</string>
    <string name="courseDate">תאריך</string>
    <string name="courseHours">סה"כ שעות</string>
    <string name="courseClass">מס\' כיתה של הקורס</string>
    <string name="alertCourseTitle">פרטי קורסים</string>
    <string name="select_course">בחר/י קורס</string>
    <string name="checklogOut">התנתק/י מהמערכת</string>
    <string name="aboutMe">מידע</string>
    <string name="checkaboutMe">הצג/י מידע על יוצר האפליקציה</string>
    <string name="wantToedit">אני רוצה לערוך פרטים</string>
    <string name="submit">שלח</string>
    <string name="edit">ערוך</string>
    <string name="close">סגור</string>
    <string name="delete">מחק</string>
    <string name="theClas">הכיתות שלי</string>
    <string name="checktheClas">בדוק/י את הכיתות</string>
    <string name="classId">קוד כיתה</string>
    <string name="select_class">בחר/י כיתה</string>
    <string name="className">שם הכיתה</string>
    <string name="classSerial">מס\' כיתה</string>
    <string name="alertClassTitle">פרטי כיתות</string>
    <string name="theStudents">סטודנטים</string>
    <string name="checktheStudents">בדוק/י את הסטודנטים</string>
    <string name="studentId">ת.ז</string>
    <string name="studentFirstName">שם פרטי</string>
    <string name="studentLastName">שם משפחה</string>
    <string name="studentFullName">שם מלא</string>
    <string name="studentClass">מס\' כיתה של הסטודנט</string>
    <string name="studentPic">יש תמונה</string>
    <string name="HasPic">יש</string>
    <string name="NoPic">אין</string>
    <string name="alertStudentTitle">פרטי טודנטים</string>
    <string name="show">הצג</string>
    <string name="theAttend">נוכחות</string>
    <string name="checktheAttend">בדוק/י נוכחות או עדכן/י נוכחות</string>d
    <string name="makeAttendance">הכנס נוכחות</string>
    <string name="findAttendanceForClass">סה"כ נוכחות בכיתה</string>
    <string name="findAttendanceForCourse">סה"כ נוכחות בקורס</string>
    <string name="attendanceCanceled">לא ניתן להזין היום נוכחות</string>
    <string name="attendanceRecycleUpdated">עדכן נוכחות</string>
    <string name="attendanceStatus">סטאטוס</string>
    <string name="importExcel">ייבא</string>
    <string name="exportExcel">ייצא</string>
    <string name="insertedAttendance">הכנסת נוכחות לקורס</string>
    <string name="onDate">בתאריך</string>
    <string name="serialNum">מס\' סידורי</string>
    <string name="alertAttendanceTitle">פרטי נוכחות</string>
    <string name="presented">נוכח</string>
    <string name="notPresented">לא נוכח</string>
    <string name="lateStats">איחר</string>
    <string name="searchInfo">יש ללחוץ על זכוכית המגדלת לחיפוש, לאחר הזנת קוד מתאים</string>
    <string name="searchFor">חפש לפי.\.\.\</string>
    <string name="searchByStudent">חיפוש לפי ת.ז של סטודנט</string>
    <string name="searchByClass">חיפוש לפי מס\' כיתה</string>
    <string name="searchByCourse">חיפוש לפי מס\' קורס</string>
    <string name="totalStud">סה"כ סטודנטים</string>
    <string name="totalStudInClass">סה"כ סטודנטים בכיתה</string>
    <string name="errorMesseage">Error while %1$s</string>
    <string name="noticeMesseage">Notice: %1$s</string>
    <string name="excelStudentError">הכנסת סטונדט/ית שאינו/אינה קיים/מת</string>
    <string name="excelStudentInfo">לחץ/י על אישור להוספת או על ביטול בשביל לא להוסיף</string>
    <string name="Ok">אישור</string>
    <string name="Cancel">ביטול</string>
    <string name="studInfo">לפני ביצוע עדכון יש לסמן את תיבת הסימון</string>
    <string name="studInfo2">כדי לבצע מחיקה אפשר לרשום רק את ת.ז של הסטודנט ואז ללחוץ על מחק</string>
</resources>
