<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainAttendanceFill">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:text="@string/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:id="@+id/view"/>
        <Button
            android:text="@string/exportExcel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:id="@+id/exportExcel"/>
        <Button
            android:text="@string/importExcel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:id="@+id/importExcel"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCourseInfo"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="14dp"
        android:text="@string/insertedAttendance"/>
    <TextView
        android:id="@+id/textOnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onDate"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycle">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>