<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainSearch">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:textColor="#fff"
                android:textSize="12dp"
                android:id="@+id/btnClose"
                android:text="@string/close"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textSearch"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="24dp"
                android:text="@string/searchInfo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/searchicon"
                android:id="@+id/searchPic"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/searchFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/searchFor"
                android:inputType="text"
                android:letterSpacing="0.1"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="16dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtnLay"
            android:layout_gravity="center"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/border"
                android:textColor="#fff"
                android:id="@+id/searchClass"
                android:textSize="12dp"
                android:textStyle="bold"
                android:text="@string/searchByClass"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#fff"
                android:background="@drawable/border"
                android:id="@+id/searchCourse"
                android:textSize="12dp"
                android:textStyle="bold"
                android:text="@string/searchByCourse"/>

            <Button
                android:id="@+id/searchStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#fff"
                android:background="@drawable/border"
                android:textSize="12dp"
                android:textStyle="bold"
                android:text="@string/searchByStudent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LayOperation"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/searchCntStudents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/border"
                android:text="@string/totalStud"
                android:textColor="#fff"
                android:textSize="12dp"
                android:textStyle="bold" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/border"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="12dp"
                android:id="@+id/searchCntStudentsInClass"
                android:text="@string/totalStudInClass"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>